@@ -1,17 +1,17 @@
 package com.cut.cardona.security;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
@@ -20,27 +20,19 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity(prePostEnabled = true)
+@RequiredArgsConstructor
 public class SecurityConfiguration {
 
+    private final SecurityFilter securityFilter;
 
-    @Autowired
-    private SecurityFilter securityFilter; // Tu filtro de JWT
-
-    @Autowired
-    private UserDetailsService userDetailsService; // Servicio de detalles de usuario personalizado
-
-    @Autowired
-    private CustomAuthenticationSuccessHandler customAuthenticationSuccessHandler; // Manejador de éxito de autenticación personalizado
-
-    String logoutSuccessMessage = "Ha cerrado sesión";
-    String errorLogoutMessage = "Ha ocurrido un error al cerrar sesión";
-    String loginErrorMessage = "Usuario o contraseña incorrectos";
+    @Value("${app.cors.allowed-origins:http://localhost:3000,http://192.168.100.2:3000}")
+    private String allowedOriginsCsv;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception {
@@ -48,29 +40,43 @@ public class SecurityConfiguration {
                 .csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(authorize -> authorize
                         .requestMatchers("/api/login").permitAll()
-                        .requestMatchers(HttpMethod.POST, "/api/login", "/api/registro", "/index").permitAll()
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        .requestMatchers(HttpMethod.POST,
+                                "/api/login",
+                                "/api/refresh",
+                                "/api/registro",
+                                "/api/registro-completo",
+                                "/api/validar-paso1",
+                                "/api/validar-paso2",
+                                "/api/verify/**",
+                                "/api/forgot",
+                                "/api/reset",
+                                "/index").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/imagenes/perfil/**").permitAll()
+                        .requestMatchers(HttpMethod.HEAD, "/api/imagenes/perfil/**").permitAll()
+                        // Catálogo público de perros
+                        .requestMatchers(HttpMethod.GET, "/api/perros/catalogo").authenticated()
+                        // Imágenes de perros SOLO para usuarios autenticados con rol explícito
+                        .requestMatchers(HttpMethod.GET, "/api/imagenes/perritos/").authenticated()
+                        .requestMatchers(HttpMethod.HEAD, "/api/imagenes/perritos/").authenticated()
                         .requestMatchers("/swagger-ui.html", "/v3/api-docs/**", "/swagger-ui/**").permitAll()
+                        .requestMatchers("/actuator/health/**", "/actuator/info").permitAll()
                         .anyRequest().authenticated()
                 )
                 .addFilterBefore(securityFilter, UsernamePasswordAuthenticationFilter.class)
-                .cors(Customizer.withDefaults())  // Esto utilizará el bean corsConfigurationSource que definimos
+                .cors(Customizer.withDefaults())
                 .httpBasic(Customizer.withDefaults());
 
         return httpSecurity.build();
     }
 
-
-
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // Especifica el origen que permites. Para producción es recomendable limitar a los orígenes necesarios.
-        configuration.setAllowedOriginPatterns(Arrays.asList("http://localhost:3000"));
-        // Permitir métodos HTTP necesarios
+        List<String> allowedOrigins = Arrays.stream(allowedOriginsCsv.split(",")).map(String::trim).toList();
+        configuration.setAllowedOriginPatterns(allowedOrigins);
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        // Permitir los headers que usarás (incluyendo Authorization si envías el token)
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
-        // Si manejas credenciales, activa esta opción
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -78,16 +84,14 @@ public class SecurityConfiguration {
         return source;
     }
 
-
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
         return authenticationConfiguration.getAuthenticationManager();
     }
 
-
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
-    }    //Configuracion para api
+    }
 
 }
